# photoshop

./: README.md
modern/: .gitignore  CMakeLists.txt  PHASES.md  PR_SUMMARY.md  README.md
modern/include/ps/core/: channel_operations.h  command.h  image_buffer.h  image_document.h  layer.h  layer_blend.h  selection_command.h  selection_mask.h  undo_stack.h
modern/include/ps/io/: image_format.h  image_io.h  png_format.h
modern/include/ps/rendering/: canvas.h  viewport.h
modern/include/ps/tools/: brush_tool.h  drawing_tools.h  selection_tools.h  tool.h  tool_manager.h
modern/src/: channel_operations.cpp  command.cpp  image_buffer.cpp  image_document.cpp  layer.cpp  layer_blend.cpp  selection_command.cpp  selection_mask.cpp  undo_stack.cpp
modern/src/app/: main.cpp
modern/src/io/: image_format.cpp  image_io.cpp  png_format.cpp
modern/src/rendering/: canvas.cpp  viewport.cpp
modern/src/tools/: brush_tool.cpp  drawing_tools.cpp  selection_tools.cpp  tool.cpp  tool_manager.cpp
